Fix #5; allow columns to collapse everywhere but PDF

--- a/source/stylesheets/print.scss
+++ b/source/stylesheets/print.scss
@@ -1,4 +1,6 @@
 $font-size-base: 10px;
+$screen-sm-min: 0px;
+$grid-float-breakpoint: 0px;
 @import "main";
 body {
   padding-bottom: 0;
